<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1"
    tools:context=".FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
    
     <Button
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hello_world"
        android:textSize="@dimen/large_font"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/message_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="auto_fit"
        android:columnWidth="320dp"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="15dp"
        android:verticalSpacing="15dp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:smoothScrollbar="true"
        android:text="@string/dummy_content" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->
    
    <Button
        android:id="@+id/btnReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/reload"
        android:textSize="@dimen/small_font" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_out"
        android:textSize="@dimen/small_font"
        android:textStyle="bold" />

</FrameLayout>